[package]
name = "old-yew-bevy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
bevy = { version = "0.5.0", default-features = false, features = [ "bevy_winit", "render"] }
console_log = "0.2.0"
log = "0.4.14"
weblog = "0.3.0"
yew = "0.18.0"
yewtil = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_webgl2 = "0.5.0"
wasm-bindgen = "0.2.69"

